5.8.3
-----
1. Don't react to slider, etc., changes in group volume dialog for fixed volume
   players when Material is set to 'Hide volume control'.

5.8.2
-----
 1. Translation updates.
 2. Add context-menu to player name in main toolbar.
 3. Use 150px (or 300px HiDPI) for list images.
 4. Reduce CPU load by removing some CSS animations - don't pulse library
    refresh status, don't pulse playing but muted volume, and use outlined pause
    icon to indicate waiting to play.
 5. Fix custom actions for playlists.
 6. Add PLAYLISTID and PLAYLISTNAME to custom action variables.
 7. Remove fix for mapping of mysqueezebox.com icons, as no longer required and
    breaks some favourites images.
 8. Add support for volume control of individual players with volume fixed at
    100% via new status query attribute - thanks to Sam Y
 9. In group volume dialog, fix player name for fixed volume players.
10. Ignore clicks on disabled queue context menu items.
11. Store player volumes when creating a group player.
12. Fix drag'n'drop in grid view not showing drag thumbnail.
13. Allow genre images to be PNG files.
14. Add (initial) support for playlist images - need to manually add
    "playlistImages: '1'" to 'prefs/plugin/material-skin.prefs'. Images need to
    be in 'prefs/material-skin/playlists/' - and have same name requirements
    as per genre images.
15. Use user genre, and playlist, images when listing favourites (if relevant
    option is enabled).
16. Create '.missing' images (e.g. 'rock.missing') for genre, and playlist,
    images that are not found (if relevant option is enabled).

5.8.1
-----
1. Allow specifying left/right window drag areas via 'dragleft' and
   'dragright' URL query parameters.
2. Add 'tbarBtnsPos' to specify window titlebar button position; 'l' for left,
   'r' for right, anything else to hide display.
3. Add 'tbarBtnsStyle' to specify window titlebar button style; 'mac', win',
   'gnome' (default).