@@ -2,6 +2,8 @@
 -----
 1. Don't react to slider, etc., changes in group volume dialog for fixed volume
    players when Material is set to 'Hide volume control'.
+2. Fix closing of transfer queue and sort list dialogs when clicking on select
+   option.
 
 5.8.2
 -----
